--- a/Stylist/Base.lproj/Main.storyboard
+++ b/Stylist/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="4H1-83-9jU" kind="push" id="7ED-Rw-PCj"/>
+                                    <segue destination="4H1-83-9jU" kind="modal" id="375-ZN-Tl0"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="fKh-Ci-u2T">
@@ -53,7 +53,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Gk5-7l-8RI" kind="modal" id="K6l-6y-eld"/>
+                                    <segue destination="Gk5-7l-8RI" kind="modal" id="d2V-I9-fR9"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -69,6 +69,33 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P1J-0Z-pgo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1249" y="549"/>
+        </scene>
+        <!--Retrieve Img Before Tester View Controller-->
+        <scene sceneID="dN9-ri-Exh">
+            <objects>
+                <viewController id="geV-kR-DGk" customClass="RetrieveImgBeforeTesterViewController" customModule="Stylist" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7wC-ww-BB3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="pOS-oA-YHk">
+                                <rect key="frame" x="156" y="411" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="testBut" destination="geV-kR-DGk" eventType="touchUpInside" id="Bfb-j9-PPc"/>
+                                    <action selector="testButton" destination="geV-kR-DGk" eventType="touchUpInside" id="lXI-hm-D1w"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1F4-WY-puP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1380" y="1398"/>
         </scene>
         <!--Upload View Controller-->
         <scene sceneID="3au-rI-g5K">
@@ -98,8 +125,18 @@
                                     <action selector="uploadButton:" destination="E9Q-RH-ZVJ" eventType="touchUpInside" id="4eq-Ux-13J"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="8cm-Mg-oh1">
+                                <rect key="frame" x="136" y="432" width="48" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Cancel">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="4H1-83-9jU" kind="modal" id="MQg-n3-HQo"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="j0a-dU-YMv">
-                                <rect key="frame" x="92" y="366" width="140" height="63"/>
+                                <rect key="frame" x="71" y="361" width="183" height="63"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Take Photo">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -117,7 +154,7 @@
                         <outlet property="uploadImageText" destination="j0a-dU-YMv" id="u5a-as-U4f"/>
                         <outlet property="uploadMessage" destination="E6s-oS-dtZ" id="MWg-Lv-oUn"/>
                         <outlet property="uploadPreviewImageView" destination="tUe-3v-fQ6" id="U63-gG-cPK"/>
-                        <segue destination="4H1-83-9jU" kind="push" identifier="goHomeFromUpload" id="78u-kF-SMc"/>
+                        <segue destination="4H1-83-9jU" kind="modal" identifier="goHomeFromUpload" id="78u-kF-SMc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hDK-eJ-Fci" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -137,9 +174,21 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Tops" id="BW7-NR-kZG">
+                                        <barButtonItem key="leftBarButtonItem" style="plain" id="ZLn-ez-iiM">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="jNb-dX-bGG">
+                                                <rect key="frame" x="-23" y="-15" width="71" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Finish">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="8vQ-e4-Iq2" kind="modal" id="faS-mm-3kR"/>
+                                                </connections>
+                                            </button>
+                                        </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="1Xd-ne-I7K">
                                             <connections>
-                                                <segue destination="E9Q-RH-ZVJ" kind="push" id="eP1-hR-DPH"/>
+                                                <segue destination="E9Q-RH-ZVJ" kind="modal" id="2Cp-Df-n3j"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -151,9 +200,10 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="mySingleCell" rowHeight="300" id="fKv-1V-mcN" customClass="SingleRowCell" customModule="Stylist" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="22" width="320" height="300"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fKv-1V-mcN" id="fvB-Ak-Ofd">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="299"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="krf-WI-mYQ">
@@ -193,7 +243,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6d5-AW-rn5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="926" y="-198"/>
+            <point key="canvasLocation" x="680" y="-335"/>
         </scene>
         <!--Password Recover View Controller-->
         <scene sceneID="GAR-ma-ixj">
@@ -515,7 +565,7 @@
                     </connections>
                 </panGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1114" y="1383"/>
+            <point key="canvasLocation" x="737" y="1429"/>
         </scene>
     </scenes>
     <resources>
@@ -530,7 +580,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="7ED-Rw-PCj"/>
         <segue reference="Bq5-TP-P86"/>
+        <segue reference="375-ZN-Tl0"/>
     </inferredMetricsTieBreakers>
 </document>
