--- a/Stylist/Base.lproj/Main.storyboard
+++ b/Stylist/Base.lproj/Main.storyboard
@@ -70,33 +70,6 @@
             </objects>
             <point key="canvasLocation" x="1249" y="549"/>
         </scene>
-        <!--Retrieve Img Before Tester View Controller-->
-        <scene sceneID="dN9-ri-Exh">
-            <objects>
-                <viewController id="geV-kR-DGk" customClass="RetrieveImgBeforeTesterViewController" customModule="Stylist" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="7wC-ww-BB3">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="pOS-oA-YHk">
-                                <rect key="frame" x="156" y="411" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="testBut" destination="geV-kR-DGk" eventType="touchUpInside" id="Bfb-j9-PPc"/>
-                                    <action selector="testButton" destination="geV-kR-DGk" eventType="touchUpInside" id="lXI-hm-D1w"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1F4-WY-puP" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1380" y="1398"/>
-        </scene>
         <!--Upload View Controller-->
         <scene sceneID="3au-rI-g5K">
             <objects>
@@ -545,7 +518,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="8vQ-e4-Iq2" kind="modal" id="Bq5-TP-P86"/>
+                                    <segue destination="8vQ-e4-Iq2" kind="modal" identifier="swipeableToHome" id="Bq5-TP-P86"/>
                                 </connections>
                             </button>
                         </subviews>
